# fic-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.py  fic_guard_entry.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: release.yml  tests.yml
docs/: fic-guard-roadmap-v0.3.md  incident-response.md  roadmap-v0.2.md  threat-model.md  why-not-a-callout-site.md
docs/patterns/: README.md  mirror-site.md  scrape-and-package.md  screenshot-circulation.md
examples/: README.md  sample.txt
src/fic_guard/: __init__.py  cli.py
src/fic_guard/common/: __init__.py
src/fic_guard/data/: search_engines.json
src/fic_guard/fingerprint/: __init__.py
src/fic_guard/monitor/: __init__.py
src/fic_guard/safe_publish/: __init__.py
src/fic_guard/timestamp/: __init__.py
src/fic_guard/web/: __init__.py  routes.py
src/fic_guard/web/templates/: base.html  fingerprint.html  index.html  library.html  library_add.html  library_detail.html  monitor.html  safe_publish.html  settings.html  timestamp.html  watermark.html  watermark_extract.html
tests/: test_fingerprint.py  test_monitor.py  test_other.py
