[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fic-guard"
version = "0.1.0"
description = "A self-protection toolkit for fiction writers: text fingerprinting, timestamp proofs, cross-site monitoring, and pre-publish safety checks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "fic-guard contributors" }]
keywords = ["fiction", "fanfiction", "fingerprint", "watermark", "timestamp", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "flask>=3.0",
    "waitress>=3.0",
    "flask-wtf>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
fic-guard = "fic_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fic_guard" = ["data/*.json"]
